--- a/chexpertService2/static/css/main.css
+++ b/chexpertService2/static/css/main.css
@@ -34,3 +34,7 @@ input[type="file"] {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+form select.form-select {
+    width: 200px;
+}
